--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">DragonSushi</string>
-    <string name="cadastre_se">cadastre-se</string>
+    <string name="cadastre_se">Cadastre-se</string>
     <string name="nome_completo">Nome completo</string>
     <string name="telefone">Telefone</string>
     <string name="email">E-mail</string>
@@ -51,4 +51,9 @@
     <string name="entrega">Entrega</string>
     <string name="selecione_o_endere_o_de_entrega">Selecione o endereço de entrega</string>
     <string name="fazer_pedido">Fazer pedido</string>
+    <string name="login">Login</string>
+    <string name="continuar">CONTINUAR</string>
+    <string name="fazer_login">Fazer login</string>
+    <string name="senha_">SENHA</string>
+    <string name="login_">LOGIN</string>
 </resources>
