--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">DragonSushi</string>
+    <string name="app_name">Dragon Sushi</string>
     <string name="cadastre_se">Cadastre-se</string>
     <string name="nome_completo">Nome completo</string>
     <string name="telefone">Telefone</string>
@@ -56,4 +56,5 @@
     <string name="fazer_login">Fazer login</string>
     <string name="senha_">SENHA</string>
     <string name="login_">LOGIN</string>
+    <string name="cpf">CPF</string>
 </resources>
